vornoi intersection computation - not finished jet.